refactor all Data Access Object to be inherit from baseDAO class.