@@ -2,14 +2,11 @@ package com.library.api;
 
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.List;
 
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
-import com.library.model.Document;
-import com.library.services.AuthorDAO;
 
 
 public class GoogleBooksAPI {
@@ -23,40 +20,6 @@ public class GoogleBooksAPI {
  *
  * @param title The title of the book for which to fetch the ISBN.
  */
-    public static void fetchIsbnByTitle(String title) {
-        try {
-            String urlString = "https://www.googleapis.com/books/v1/volumes?q=intitle:" + title.replace(" ", "+");
-            URL url = new URL(urlString);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.setConnectTimeout(5000);
-            connection.setReadTimeout(5000);
-            
-            InputStreamReader reader = new InputStreamReader(connection.getInputStream());
-            JsonObject response = JsonParser.parseReader(reader).getAsJsonObject();
-            
-            if (response.has("items")) {
-                JsonObject bookInfo = response.getAsJsonArray("items").get(0).getAsJsonObject().getAsJsonObject("volumeInfo");
-                
-                // Get ISBN
-                JsonObject industryIdentifiers = bookInfo.getAsJsonArray("industryIdentifiers").get(0).getAsJsonObject();
-                String isbn13 = industryIdentifiers.get("identifier").getAsString(); // ISBN 13
-                System.out.println("ISBN 13: " + isbn13);
-                
-                // You can also fetch ISBN 10 if needed
-                String isbn10 = bookInfo.getAsJsonArray("industryIdentifiers").size() > 1 ? 
-                                 bookInfo.getAsJsonArray("industryIdentifiers").get(1).getAsJsonObject().get("identifier").getAsString() 
-                                 : null;
-                if (isbn10 != null) {
-                    System.out.println("ISBN 10: " + isbn10);
-                }
-            } else {
-                System.out.println("No results found for book title: " + title);
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
 
     // BookDetails class to hold book information
     public static class BookDetails {
@@ -65,12 +28,14 @@ public class GoogleBooksAPI {
         private String publisher;
         private String[] categories;
         private String datePublished;
+        private String isbn;
 
-        public BookDetails(String title, String[] authors, String publisher, String[] categories, String datePublished) {
+        public BookDetails(String title, String[] authors, String publisher, String[] categories, String isbn, String datePublished) {
             this.title = title;
             this.authors = authors;
             this.publisher = publisher;
             this.categories = categories;
+            this.isbn = isbn;
             this.datePublished = datePublished;
         }
 
@@ -91,6 +56,10 @@ public class GoogleBooksAPI {
             return categories;
         }
 
+        public String getIsbn() {
+            return isbn;
+        }
+
         public String getDatePublished() {
             return datePublished;
         }
@@ -106,10 +75,24 @@ public class GoogleBooksAPI {
         }
     }
 
-    public static BookDetails fetchBookByIsbn(String isbn) {
+    public static BookDetails fetchBookDetails(String isbnOrTitle, String type) {
+        System.out.println(isbnOrTitle + " " + type);
+        String urlString;
+
+        if (type.equals("isbn")) {
+            if (isbnOrTitle.contains("-")) {
+                isbnOrTitle.replace("-", "");
+            }
+            urlString = "https://www.googleapis.com/books/v1/volumes?q=isbn:" + isbnOrTitle;
+        } else if (type.equals("title")) {
+            urlString = "https://www.googleapis.com/books/v1/volumes?q=intitle:" + isbnOrTitle;
+        } else {
+            return null;
+        }
+
         try {
-            String urlString = "https://www.googleapis.com/books/v1/volumes?q=isbn:" + (isbn.length() == 10 ? isbn : isbn.replace("-", ""));
-            URL url = new URL(urlString);
+            URI uri = new URI(urlString);
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             connection.setConnectTimeout(5000);
@@ -138,14 +121,17 @@ public class GoogleBooksAPI {
                 for (int i = 0; i < categories.length; i++) {
                     categories[i] = bookInfo.getAsJsonArray("categories").get(i).getAsString();
                 }
+
+                // Get isbn
+                String isbn = bookInfo.has("industryIdentifiers") ? bookInfo.getAsJsonArray("industryIdentifiers").get(0).getAsJsonObject().get("identifier").getAsString() : "N/A";
                 
                 // Get date published
                 String datePublished = bookInfo.has("publishedDate") ? bookInfo.get("publishedDate").getAsString() : "N/A";
                 
                 // Return a BookDetails object
-                return new BookDetails(title, authors, publisher, categories, datePublished);
+                return new BookDetails(title, authors, publisher, categories, isbn, datePublished);
             } else {
-                System.out.println("No results found for ISBN: " + isbn);
+                System.out.println("No results found.");
                 return null;
             }
         } catch (Exception e) {
@@ -153,4 +139,8 @@ public class GoogleBooksAPI {
             return null;
         }
     }
+
+
+
+
 }
